# octo-ns

./: README.md
common/gen-cpp/: MNSCacheService.cpp  MNSCacheService.h  ServiceAgent.cpp  ServiceAgent_server.skeleton.cpp  ThriftSpans_constants.cpp  ThriftSpans_types.cpp  mnsc_data_constants.cpp  mnsc_data_types.cpp  mnsc_service_constants.cpp  mnsc_service_types.cpp  naming_common_constants.cpp  naming_common_types.cpp  naming_data_constants.cpp  naming_data_types.cpp  naming_service_constants.cpp  naming_service_types.cpp  unified_protocol_constants.cpp  unified_protocol_types.cpp
common/idl-mns/idl-common/: Compile.md  pom.xml
common/idl-mns/idl-common/src/main/thrift/: idc.thrift  naming_common.thrift  naming_data.thrift  naming_service.thrift  unified_protocol.thrift
common/idl-mns/idl-mnsc/: Compile.md  pom.xml
common/idl-mns/idl-mnsc/src/main/thrift/: mnsc_data.thrift  mnsc_service.thrift
conf/: build_common_cfg.sh  idc.xml  octo.cfg
docs/: ns-quick-start.md  octo-ns.md  zookeeper_data_build.md
mns-cache/: README.md  pom.xml
mns-cache/src/main/java/com/meituan/octo/mnsc/: MnscServerApplication.java
mns-cache/src/main/resources/: application.yaml  applicationContext.xml  webmvc-config.xml
mns-cache/src/main/scala/com/meituan/octo/mnsc/dataCache/: appProviderDataCache.scala  appProviderHttpDataCache.scala  providerBaseCache.scala
mns-cache/src/main/scala/com/meituan/octo/mnsc/model/: Env.scala  ServerType.scala
mns-cache/src/main/scala/com/meituan/octo/mnsc/remote/: zk.scala
mns-cache/src/main/scala/com/meituan/octo/mnsc/service/: apiProviders.scala  mnscService.scala
mns-cache/src/main/scala/com/meituan/octo/mnsc/utils/: api.scala  mnscCommon.scala  zkCommon.scala
mns-cache/src/test/java/com/meituan/octo/mnsc/: MNSCacheServiceTest.java
mns-cache/src/test/scala/com/meituan/octo/mnsc/test/: ServiceSuite.scala  (+1 more)
mns-invoker/: README.md  pom.xml
mns-invoker/src/main/java/com/meituan/octo/mns/: Consts.java
mns-invoker/src/test/java/com/meituan/octo/mns/: AsyncTests.java  InvokeProxyTests.java  SGServiceUtilTests.java  SocketClientPortTests.java
mns-invoker/src/test/resources/: application.properties
mns-sdk/: CMakeLists.txt  ReadMe.md
mns-sdk/docs/: mns_sdk_api.md
mns-sdk/example/: octo.cfg  octo_bak.cfg
mns-sdk/src/: CMakeLists.txt  mns_sdk.cc  mns_worker.cc  thrift_client.cc
mns-sdk/src/test/: mns_thread_test.cc
mns-sdk/src/util/: mns_config.cc  mns_sdk_common.cc
mns-sdk/thrid/octoidl/: CMakeLists.txt
nsc/: README.md  pom.xml  run.sh
nsc/src/main/profiles/online/: log4j2.xml
nsc/src/main/profiles/test/: log4j2.xml
nsc/src/test/java/com/meituan/octo/mnsc/: MNSCacheApiTest.java  SpringBaseTest.java
nsc/src/test/resources/: applicationContext.xml
scanner/: README.md  pom.xml
scanner/src/main/resources/: application.yaml  log4j2.xml
sdk/mns-invoker/: README.md  pom.xml
sdk/mns-invoker/docs/: Compile.md
sdk/mns-invoker/src/test/resources/: log4j2.xml
sdk/mns-sdk/: CMakeLists.txt  ReadMe.md
sdk/mns-sdk/cmake/: FindGtest.cmake  SetupGtest.cmake
sdk/mns-sdk/docs/: mns_sdk_api.md
sdk/mns-sdk/example/: CMakeLists.txt  mns_sdk_example.cc
sdk/mns-sdk/src/test/: CMakeLists.txt
sdk/mns-sdk/src/util/: mns_config.h  mns_log.cc
sdk/mns-sdk/thrid/octoidl/: CMakeLists.txt
sdk/mns-sdk/tool/: clear4git.sh
sg_agent/: CMakeLists.txt  README.md  build.sh
sg_agent/cmake/: CodeCoverage.cmake  FindBoost.cmake  FindCthrift.cmake  FindLog4cplus.cmake  FindMuduo.cmake  FindSdk.cmake  FindThrift.cmake
sg_agent/conf/: README.md  conf.json  log4cplus.conf  sg_agent_mutable.xml  sg_agent_whitelist.xml
sg_agent/src/: main.cc
sg_agent/src/cmake/: FindCurl.cmake  FindLog4cplus.cmake  FindMuduo.cmake  FindThrift.cmake  FindZookeeper.cmake  SetupGtest.cmake
sg_agent/src/comm/: buffer_mgr.h  inc_comm.h  md5.cc
sg_agent/src/mns/: CMakeLists.txt  agent_init.cc  agent_init.h  agent_server.cc  agent_server.h  config_loader.cc  config_loader.h  discovery_model.h  discovery_service.cc  discovery_service.h  discovery_zk_client.cc  discovery_zk_client.h  hot_load_config.cc  hot_load_config.h  http_service.cc  http_service.h  mnsc_client.cc  mnsc_client.h  registry_base.h  registry_service.cc  registry_service.h  registry_strategy.cc  registry_strategy.h  service_channels.cc  service_channels.h  zk_client.cc  zk_client.h  zk_client_pool.cc  zk_client_pool.h  zk_invoke_param.h
sg_agent/src/remote/monitor/: monitor_collector.cc  monitor_collector.h
sg_agent/src/rule/: route_base.cc  route_base.h  route_info.cc  route_info.h  route_rule.cc  route_rule.h
sg_agent/src/tool/: README_BUILD.md  build_agent.sh  build_unittest.sh  clear4git.sh  run_sgagent  svc.sh
sg_agent/src/util/: base_consts.h  base_errors_consts.h  base_mns_consts.h  base_mns_define.h  falcon_mgr.cc  falcon_mgr.h  json_data_tools.cc  json_data_tools.h  sds_tools.h  thrift_client.h  thrift_connection.cc  thrift_connection.h  version_manager.cc  version_manager.h  whitelist_manager.cc  whitelist_manager.h  zk_path_tools.cc  zk_path_tools.h
sg_agent/test/: CMakeLists.txt  build_unittest.sh  clean.sh  main.cpp  naming_config_loader_unittest.cc  naming_disc_service_unittest.cc  naming_http_service_unittest.cc  naming_idc_check_unittest.cpp  naming_mnsc_service_unittest.cc  naming_registry_service_unittest.cc  naming_registry_strategy_unittest.cc  naming_version_manager_unittest.cc  naming_whitelist_manager_unittest.cc  naming_zk_client_unittest.cc  naming_zk_client_unitttest.cc  naming_zk_path_tools_unittest.cc
sg_agent/thrid_party/logs/include/: config.h
sg_agent/thrid_party/logs/log4cplus/: log4cplus.conf  log4cplus.cpp  log4cplus.h
sg_agent/thrid_party/logs/log4cplus/include/log4cplus/: stamp-h1
sg_agent/thrid_party/logs/log4cplus/include/log4cplus/config/: defines.hxx  stamp-h2
sg_agent/thrid_party/thrift/include/server/: TNonblockingServer.cpp  TNonblockingServer.h  TServer.h
sg_agent/thrid_party/zookeeper/include/zookeeper/: recordio.h
sg_agent/tool/: README_BUILD.md  build_resource.sh  build_unittest.sh  clear4git.sh  run_server.sh
(+67 files in other folders)
