INCLUDE_DIRECTORIES(SYSTEM echo)
INCLUDE_DIRECTORIES(SYSTEM ${INCLUDE_OUTPUT_PATH})
LINK_DIRECTORIES(${LIBRARY_OUTPUT_PATH})

LINK_DIRECTORIES(${LIBRARY_OUTPUT_PATH})

ADD_EXECUTABLE(mns_sdk_example mns_sdk_example.cc)

TARGET_LINK_LIBRARIES(mns_sdk_example -Xlinker "-(" libmns_sdk.a
        ${MUDUO_BASE_LIBRARY} ${MUDUO_NET_LIBRARY} ${MUDUO_HTTP_LIBRARY}
        pthread rt uuid ${ZLIB_LIBRARY} ${LOG4CPLUS_LIBRARY} liboctoidl.a
        ${THRIFT_LIBRARY} -Xlinker "-)")

